@@ -59,7 +59,7 @@ class CLocale extends CComponent
 			$locales=array();
 			$dataPath=self::$dataPath===null ? dirname(__FILE__).DIRECTORY_SEPARATOR.'data' : self::$dataPath;
 			$folder=@opendir($dataPath);
-			while($file=@readdir($folder))
+			while(($file=@readdir($folder))!==false)
 			{
 				$fullPath=$dataPath.DIRECTORY_SEPARATOR.$file;
 				if(substr($file,-4)==='.php' && is_file($fullPath))
