@@ -320,8 +320,8 @@ class CWebUser extends CApplicationComponent implements IWebUser
 		$cookie=$app->getRequest()->getCookies()->itemAt($this->getStateKeyPrefix());
 		if($cookie && !empty($cookie->value) && ($data=$app->getSecurityManager()->validateData($cookie->value))!==false)
 		{
-			$data=unserialize($data);
-			if(isset($data[0],$data[1],$data[2],$data[3]))
+			$data=@unserialize($data);
+			if(is_array($data) && isset($data[0],$data[1],$data[2],$data[3]))
 			{
 				list($id,$name,$duration,$states)=$data;
 				$this->changeIdentity($id,$name,$states);
