@@ -95,11 +95,17 @@ Version 1.0.12 to be released
 - Bug #731: When using CWebService to generate WSDL, it may cause the error about Premature end of data in tag definitions in SoapClient (Qiang)
 - Bug #740: CDbCriteria::addColumnCondition() should handle NULL parameter correctly (Qiang)
 - Bug #742: CEmailValidator should allow upper case email addresses (Qiang)
+- Bug #776: CWebUser may fail when unserializing invalid cookie data (Qiang)
+- Bug #788: CHttpRequest.sendFile() gives incorrect content length when output_handler is enabled (Qiang)
 - Bug #801: CCaptcha allows unlimited tests if the CAPTCHA image is not reloaded (Qiang)
+- Bug #832: CJavaScript::quote() should also escape the sequence "</" (Qiang)
+- Bug #843: CApcCache::mget() may fail if some entries of the specified keys are not cached (Qiang)
 - Bug: CVarDumper sometimes doesn't dump object value correctly (Qiang)
 - Bug: COciSchema::findTableNames() should use upper case for the keys of query results (Qiang)
+- Bug: Fixed several bugs related with readdir problem. If the directory contains a file named '0', the iteration would quit prematurely. (Qiang)
 - Enh #730: Relational queries now respect changes made to CActiveRecord::dbCriteria in the onBeforeFind event (Qiang)
 - Enh #737: CUrlManager::createUrl() now supports multidimensional array params (Jonah)
+- Enh #757: Allow CDbCriteria::addInCondition() to use parameter array that is not integer-indexed (Qiang)
 
 Version 1.0.11 December 13, 2009
 --------------------------------
